fixing spacing issues above prose wrappers

--- a/ArticleTemplates/assets/scss/templates/_article--shared.scss
+++ b/ArticleTemplates/assets/scss/templates/_article--shared.scss
@@ -2,7 +2,7 @@
 .article--comment,
 .article--feature {
 	.article__body {
-		@include padding(0, 1);
+		@include padding(1, 1, 0, 1);
 		@include mq(col2, col3) {
 			padding-right: cols($base-3, 3);
 		}
